Fix about content right alignment

--- a/static/css/redesign.css
+++ b/static/css/redesign.css
@@ -471,7 +471,7 @@ body {
 }
 
 .about-content .content-container {
-    width: auto;
+    width: fit-content;
 }
 
 /* Responsive */
